# Projeto_Pratico_bd

./: README.md  docker-compose.yml  main.py  models.py  pyproject.toml  schema.sql
config/: database.py
models/: models.py
repositories/: usuario_repository.py
